force-app/main/default/objects/ElectricityEmssnFctrSet.object
<CustomObject>
    <fields>
        <fullName>EmissionsFactorUpdateYear__c</fullName>
        <description>Emissions Factor Update Year</description>
        <label>Emissions Factor Update Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MasterEmissionsSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MasterEmissionsSet</label>
        <referenceTo>ElectricityEmssnFctrSet</referenceTo>
        <relationshipLabel>Electricity Emissions Factor Sets</relationshipLabel>
        <relationshipName>Electricity_Emissions_Factor_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Emissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recalculate Emissions</description>
        <label>Recalculate Emissions</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>